--- a/analyse_200ms.ipynb
+++ b/analyse_200ms.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:16bcdfbc21bacdec19962d43c5f67275c1c1976b16fa1c7d750e8c2e0704398f"
+  "signature": "sha256:9e94e316ded15cf7b0a059cdca209fcb8aab7e4772d81cb4b5f9aa805c3db650"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -21,7 +21,8 @@
       "import matplotlib.pyplot as plt\n",
       "%matplotlib inline\n",
       "init = 0\n",
-      "for fn in glob.glob('./*jean*.csv'):#jean004.csv'):\n",
+      "for fn in glob.glob('ALL/200.0ms/*jean*.csv'):\n",
+      "#for fn in glob.glob('./*jean*.csv'):#jean004.csv'):\n",
       "    df = pd.read_csv(fn)\n",
       "    if (init == 1):\n",
       "        all_data = [df, all_data]\n",
