small chanes to nbs

--- a/analyse_ALL_proto.ipynb
+++ b/analyse_ALL_proto.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:2798a32be04e29c9670fe5259d155a6f979b53a2f2df9757a2d20be5f2dfa9a5"
+  "signature": "sha256:311c77a49206bffdbe8cda602c4235afc2942a8f5dea5894deadc5da6231c0c7"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -21,7 +21,7 @@
       "import matplotlib.pyplot as plt\n",
       "%matplotlib inline\n",
       "init = 0\n",
-      "for fn in glob.glob('ALL/50.0ms/*jean*.csv'):\n",
+      "for fn in glob.glob('ALL/50.0ms//*jean*.csv'):\n",
       "    df = pd.read_csv(fn)\n",
       "    if (init == 1):\n",
       "        all_data = [df, all_data]\n",
